package view.piece;

public interface Movable {
    void moveDown();
    void moveLeft();
    void moveRight();
}
